hoan tat tru thanh toan hoan tien bao cao